# profiler-rs

./: .gitignore  Cargo.toml  README.md  build.sh  example.sh  test.sh
examples/: launch-process.rs  output-json.rs  profile.json
examples/utils/: mod.rs
src/: buffer_thread.rs  core.rs  lib.rs  markers.rs  sampler.rs  sampler_mac.rs  sampler_thread.rs  signal_safe_linked_list.rs  startup.rs  time_expiring_buffer.rs
src/sampler/: linux.rs  mac.rs  sampler.rs  windows.rs
